# ADS_Truck-Platooning

./: .gitmodules  README.md
docker/: Dockerfile
platoon_ws/src/lane_detection/: package.xml  setup.py
platoon_ws/src/lane_detection/lane_detection/: cam_pixel_world_transform.py  class_image_processor.py  main.py  pixel_to_world.py
platoon_ws/src/lateral_control/: CMakeLists.txt  package.xml
platoon_ws/src/lateral_control/include/lateral_control/: lateral_control_node.hpp  pure_pursuit.hpp
platoon_ws/src/lateral_control/launch/: lateral_control.launch.py
platoon_ws/src/lateral_control/src/: lateral_control_node.cpp  main.cpp  pure_pursuit.cpp
platoon_ws/src/longitudinal_control/: CMakeLists.txt  package.xml
platoon_ws/src/longitudinal_control/include/longitudinal_control/: gap_control.hpp  longitudinal_control_node.hpp  velocity_control.hpp
platoon_ws/src/longitudinal_control/src/: gap_control.cpp  longitudinal_control_node.cpp  main.cpp  velocity_control.cpp
